--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           export JIT_ACCESS_TOKEN=$(curl -X POST -d "{\"clientId\":\"$JIT_API_CLIENT_ID\", \"secret\":\"$JIT_API_CLIENT_SECRET\"}" -H "Content-Type: application/json" https://api.cto.jitdev.io/authentication/login | jq -r .accessToken)
           echo $JIT_ACCESS_TOKEN
-          curl -H "Authorization: Bearer $JIT_ACCESS_TOKEN" -H "Accept: application/sarif+json" https://api.cto.jitdev.io/findings/ > /tmp/findings.sarif
+          curl -H "Authorization: Bearer $JIT_ACCESS_TOKEN" -H "Accept: application/sarif+json" https://api.cto.jitdev.io/findings/ | jq '.findings' > /tmp/findings.sarif
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
